04-deployment/ingress-host/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-host
  namespace: workshop
spec:
  ingressClassName: nginx
  rules:
    - host: podinfo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  name: http
